Move sir-ex1.png

--- a/sir.ipynb
+++ b/sir.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "**Beispiel:** Zum Startzeitpunkt $t=0$ seien in einer Gruppe von insgesamt $N=1000$ Personen (z.B. ein Dorf) zehn Personen infiziert, also $S(0)=10$. Dann könnte unter gewissen Annahmen zur Infiktionsrate etc. die Entwicklung folgendermaßen aussehen:\n",
     "\n",
-    "![](Resources/sir-ex1.png)\n",
+    "![](sir-ex1.png)\n",
     "\n",
     "$$\n",
     "\\begin{array}{r|r|r|r|r}\n",
