--- a/sir.ipynb
+++ b/sir.ipynb
@@ -68,17 +68,17 @@
     "  Die Übertragungsrate müssen wir uns implizit (versteckt) aus zwei bzw. vielen Komponenten zusammengesetzt vorstellen: \n",
     "  (1.) Der (biologisch, medizinischen) Infektiosität (engl.: _infectivity_), also die \n",
     "  Fähigkeit eines Erregers in einen Wirt einzudringen und die Krankheit auszulösen und \n",
-    "  (2.) Die Anzahl von Kontakten pro Tag. Wäre z.B. die Infektiosität bekannt und konstant\n",
+    "  (2.) der Anzahl von Kontakten pro Tag. Wäre z.B. die Infektiosität bekannt und konstant\n",
     "  gleich $25\\%$, dann ist die Wahrscheinlichkeit einer Übertragung (d.h. die Übertragungsrate)\n",
     "  bei zwei Kontakten pro Tag gleich\n",
     "  $1-(0,75)^2\\approx 44\\%$ und bei fünf $76\\%$ und bei zehn Kontakten $94\\%$.\n",
     "  Eigentlich gibt es noch vielmehr Faktoren die in die Übertragungsrate eingehen. Z.B. \n",
     "  Kontakte in Innenraum oder Außenraum, Temperatur, Luftfeuchte, tragen die Personen Schutzmasken,\n",
     "  Stärke des Immunsystems, u.s.w.. Festzuhalten bleibt, dass die Übertragungsrate \n",
-    "  z.B. durch Kontakteinschränkung oder etwa dem Tragen von Schutzmasken verändert werden kann.\n",
+    "  z.B. durch Kontakteinschränkung oder etwa dem Tragen von Schutzmasken verringert werden kann.\n",
     "  Würde man z.B. alle Kontakte vermeiden, so würde die Übertragungsrate $\\beta$ auf Null sinken.\n",
     "* $\\pmb\\gamma$ (gamma, engl.: _**recovery-rate**_) ist die durchschnittliche Rate pro Tag, mit der\n",
-    "  eine infizierte Person gesundetet oder verstirbt, also insbesondere **immun** wird. \n",
+    "  eine infizierte Person gesundetet oder verstirbt, also insbesondere **immun** wird (es klingt etwas merkwürdig, wenn wir eine verstorbene Person als immun bezeichen - dies ist aber in unserem Modell korrekt, da Verstorbene ebenso wie Gesundete in der Gruppe $R$ verbleiben).\n",
     "  Ist der durchsnittliche Zeitraum in der eine Person ansteckend ist ([Infektiöse Periode](infektiöse-Periode))\n",
     "  gleich $D_I$ Tage, dann könnent wir $\\gamma$ auch durch $\\gamma=1/D_I$  ersetzen.\n",
     "  Es wird also insbesondere angenommen, dass die [Latenzzeit](#Latenzzeit) gleich Null ist.\n",
